Fix select appearance on safari

--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -205,6 +205,7 @@ label {
 
 .seq-select {
     appearance: none;
+    -webkit-appearance: none;
     text-align: center;
     text-align-last: center;
 }
